--- a/src/main/html/index.html
+++ b/src/main/html/index.html
@@ -11,6 +11,7 @@
   <link href='css/screen.css' media='screen' rel='stylesheet' type='text/css'/>
   <link href='css/reset.css' media='print' rel='stylesheet' type='text/css'/>
   <link href='css/print.css' media='print' rel='stylesheet' type='text/css'/>
+  <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800">
   <script src='lib/jquery-1.8.0.min.js' type='text/javascript'></script>
   <script src='lib/jquery.slideto.min.js' type='text/javascript'></script>
   <script src='lib/jquery.wiggle.min.js' type='text/javascript'></script>
@@ -108,42 +109,36 @@
         }
       }
 
-      if (!($("#input_baseUrl").val())) {
-        $("#input_baseUrl").val("goadesign/goa-cellar/design");
-      }
+      // if (!($("#input_baseUrl").val())) {
+      //   $("#input_baseUrl").val("goadesign/goa-cellar/design");
+      // }
   });
   </script>
 </head>
 
 <body class="swagger-section">
 <div id='header'>
-  <div class="swagger-ui-wrap">
-    <a id="logo" href="http://swagger.goa.design">goa swagger</a>
-    (<a class="subtext" href="http://goa.design/design/swagger.html">what is this?</a>)
+  <div class="logo">
+    <img alt="goa" src="../images/goa-logo.svg"/>
   </div>
+  <div class="center">
+    Swagger Generator
+  </div>
+    <!-- <a href="http://goa.design/design/swagger.html">About</a> -->
 </div>
 
 <div id="message-bar" class="swagger-ui-wrap" data-sw-translate>&nbsp;</div>
 <div class="modal" id="selector">
-  <form accept-charset="UTF-8" id="prompt">
-    <div class="prompt">
-      <p>goa service design package:</p>
-    </div>
-    <div class="wrap">
-      <div class="left">
-        <div class="filename">
-          github.com/
-        </div>
-      </div>
-      <div class="right">
-        <a id="explore" href="#" onclick="$('#prompt').submit();">Go</a>
-      </div>
-      <div class="center">
-        <input id="input_baseUrl" name="url" type="text" onclick="this.select()" />
-      </div>
-      <div class="center">
-        <div class='input'><input placeholder="api_key" id="input_apiKey" name="apiKey" type="text"/></div>
-      </div>
+    <div class="center">
+      <form id="prompt" action="#">
+        <input id="input_baseUrl" name="url" type="text" placeholder="github.com/goadesign/goa-cellar/design"/>
+        <button type="submit">Generate</button>
+      </form>
+        <!-- design package: <input id="input_baseUrl" name="url" type="text" onclick="this.select()" /> -->
+        <!-- <a id="explore" href="#" onclick="$('#prompt').submit();">Go</a> -->
+      <!-- <div class="center"> -->
+        <!-- <div class='input'><input placeholder="api_key" id="input_apiKey" name="apiKey" type="text"/></div> -->
+      <!-- </div> -->
     </div>
   </form>
 </div>
