--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         if (url.slice(0, 10) != "github.com") {
           url = "github.com/" + url;
         }
-        url = "http://api.swagger.goa.design:8080/swagger/spec/"+decodeURIComponent(url);
+        url = "http://api.swagger.goa.design/swagger/spec/"+decodeURIComponent(url);
       }
 
       hljs.configure({
