Tweak swagger.goa.design style

--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
 <div class="modal" id="selector">
     <div class="center">
       <form id="prompt" action="#">
-        <input id="input_baseUrl" name="url" type="text" value="goadesign/goa-cellar/design" placeholder="github.com/goadesign/goa-cellar/design"/>
+        <input id="input_baseUrl" name="url" type="text" value="goadesign/goa-cellar/design" placeholder="github.com/goadesign/goa-cellar/design@master"/>
         <button type="submit">Generate</button>
       </form>
         <!-- design package: <input id="input_baseUrl" name="url" type="text" onclick="this.select()" /> -->
