Move from api.swagger.goa.design to swagger-api.goa.design

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
           url = "github.com/" + url;
         }
         if (url.slice(0,4) != "http") {
-          url = "https://api.swagger.goa.design/swagger/spec?pkg="+decodeURIComponent(url);
+          url = "https://swagger-api.goa.design/swagger/spec?pkg="+decodeURIComponent(url);
         }
       }
 
