--- a/src/main/html/index.html
+++ b/src/main/html/index.html
@@ -39,7 +39,7 @@
         if (url.slice(0, 11) != "github.com/") {
           url = "github.com/" + url;
         }
-        url = "https://api.swagger.goa.design/swagger/spec/"+decodeURIComponent(url);
+        url = "https://swagger-api.goa.design/swagger/spec?pkg="+decodeURIComponent(url);
       }
 
       hljs.configure({
